@@ -390,10 +390,37 @@ extern int launch_p_setup_srun_opt(char **rest)
 			xfree(tmp);
 		}
 
-		if (opt.export_env && !strcasecmp(opt.export_env, "NONE")) {
+		if (opt.export_env) {
+			char *tmp_env, *tok, *save_ptr = NULL, *eq_ptr;
+			bool has_equal = false;
 			opt.argv[i++]  = xstrdup("--exp-env");
 			opt.argv[i++]  = xstrdup("SLURM_JOB_ID");
 			opt.argv[i++]  = xstrdup("SLURM_STEP_ID");
+			tmp_env = xstrdup(opt.export_env);
+			tok = strtok_r(tmp_env, ",", &save_ptr);
+			while (tok) {
+				if (!strcasecmp(tok, "NONE"))
+					break;
+				eq_ptr = strchr(tok, '=');
+				if (eq_ptr)
+					has_equal = true;
+				else
+					opt.argv[i++]  = xstrdup(tok);
+				tok = strtok_r(NULL, ",", &save_ptr);
+			}
+			xfree(tmp_env);
+			if (has_equal) {
+				opt.argv[i++]  = xstrdup("--envs");
+				tmp_env = xstrdup(opt.export_env);
+				tok = strtok_r(tmp_env, ",", &save_ptr);
+				while (tok) {
+					eq_ptr = strchr(tok, '=');
+					if (eq_ptr)
+						opt.argv[i++]  = xstrdup(tok);
+					tok = strtok_r(NULL, ",", &save_ptr);
+				}
+				xfree(tmp_env);
+			}
 		} else {
 			/* Export all the environment so the
 			 * runjob_mux will get the correct info about
