@@ -14,6 +14,7 @@ documents those changes that are of interest to users and admins.
  -- Use the slurm_getpwuid_r wrapper of getpwuid_r to handle possible
     interrupts.
  -- Allow --ignore-pbs to take effect when read as an #SBATCH argument.
+ -- Added srun --export option to set/export specific environment variables.
 
 * Changes in Slurm 14.03.11
 ===========================
